# Ai_Art_Critique

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: Data-Exploration.ipynb  Embeddings.ipynb  First-Exploration.ipynb  art_metadata.json  critiques.ipynb  vector_db.ipynb
src/ai_art_critic/: __init__.py  __main__.py  settings.py
src/ai_art_critic/datasets/: FaissIndexDataset.py  __init__.py  huggingface_dataset.py
src/ai_art_critic/pipelines/critique_generation/: nodes.py  pipeline.py
src/ai_art_critic/pipelines/data_processing/: nodes.py  pipeline.py
src/ai_art_critic/utils/: vector_store.py
